[package]
name = "github-pr-code-review"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
github-flows = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio_wasi = { version = "1.25.1", features = ["full"] }
anyhow = "1"
flowsnet-platform-sdk = "0.1.2"
openai-flows = "0.3.0"
http_req_wasi = { version = "0.10.2", features = ["wasmedge_ssl"] }
slack-flows = "0.2.6"
tiktoken-rs = "0.2.2"
